--- a/web_app.css
+++ b/web_app.css
@@ -32,7 +32,7 @@ body {
     letter-spacing: 1px;
     padding: 5px 8px;
 }
-.nav-sticky ul a {
+.nav-sticky a {
     color: var(--black-magic);
     font-weight: 400;
 }
